Now connected to the CSS

--- a/index.html
+++ b/index.html
@@ -1,33 +1,7 @@
 <!DOCTYPE html></DOCTYPE>
 <html></html>
 <head>
-
-<!--This is my internal CSS-->
-<style>
-
-p 
-{
-    font-size: 2rem;
-    }
-
-h2 
-{
-    font-size: 3rem;
-}
-
-h1
-{
-    font-size: 3.5rem;
-    text-align: center;
-}
-
-ul
-{
-    font-size: 2rem;
-}
-
-</style>
-
+<link rel="stylesheet" href="style.css">
 <title>Mock Webpage</title>
 </head>
 
@@ -46,7 +20,7 @@ ul
       do you say that's going too far.
 </p></font>
 <p>The genres for this anime are:
-<ul>
+<ul class="Geass">
     <li>Mecha</li>
     <li>Action</li>
     <li>Military</li>
@@ -55,7 +29,7 @@ ul
 </ul>
 </p></article>
 
-<article><b><h2><font color="Navy Blue"><center>Fruits Basket</b></center></h2>
+<article><b><h2><font color="navy"><center>Fruits Basket</b></center></h2>
     <center><img src="images/Fruits Basket.jpg" alt="Image Unavailable"></center>
 <p>Fruits Basket is an anime created by Studio Deen Studio back in 2001.  It is composed of 26 episodes in total and 
     follows the life of Tohru Honda, a high school girl who recently lost her mother due to a car accident.  Through a 
@@ -66,7 +40,7 @@ ul
     the ups and downs of love, friendship, and heartbreak. 
 </p></font>
 <p>The genres for this anime are:
-        <ul>
+        <ul class="Fruits">
                 <li>Slice of Life</li>
                 <li>Fantasy</li>
                 <li>Drama</li>
@@ -87,7 +61,7 @@ ul
     If you like gritty detective shows with a bit of a twist to them, then this is the anime for you.</p></font>
 
     <p>The genres for this anime are:
-            <ul>
+            <ul id="Ghost">
                     <li>Action</li>
                     <li>Military</li>
                     <li>Seinen</li>
@@ -97,7 +71,7 @@ ul
                 </ul>
     </p></article>
 
-<article><b><h2><center><font color="bc3d21">Inuyasha</b></center></h2>
+<article><b><h2><center><font color="maroon">Inuyasha</b></center></h2>
     <center><img src="images/Inuyasha.jpg" alt="Image Unavailable"></center>
 <p>Inuyasha is an anime created by Sunrise Studio back in 2000.  There are 167 episodes in the first season and 26 
     episodes in the second season.  The anime follows Kagome, a typical high school girl who gets pulled through a well 
@@ -110,7 +84,7 @@ ul
     hardships.
 </p></font>
 <p>The genres for this anime are:
-    <ul>
+    <ul class="Inu">
         <li>Action</li>
         <li>Adventure</li>
         <li>Fantasy</li>
@@ -149,8 +123,8 @@ ul
 <br>
 <address>
 <footer>
-    <p >Webpage Created By:  Michelle Williams &copy;</p>
-    <p align="right">Contact Information <a href="mailto:mcwilli94@gmail.com"> mcwilli94@gmail.com </a></p></font>
+    <div>Webpage Created By:  Michelle Williams &copy;</div>
+    <div align="right">Contact Information <a href="mailto:mcwilli94@gmail.com"> mcwilli94@gmail.com </a></div></font>
 </footer>
 </address>
 </body>
